--- a/Resources/view/template.html.twig
+++ b/Resources/view/template.html.twig
@@ -1,3 +1,3 @@
 {% trans_default_domain('field.country') %}
 
-<div data-bg="/assets/field_country/{{ value }}.svg" class="lazy circle-25 bg-cover" title='{{ value|trans }}'></div>
+<div data-bg="/assets/field_country/{{ value }}.svg" class="lazy rounded-circle bg-cover" style='width: 20px; height: 20px;' title='{{ value|trans }}'></div>
