--- a/Resources/view/render.html.twig
+++ b/Resources/view/render.html.twig
@@ -1,3 +1,10 @@
 {% trans_default_domain('field.country') %}
 
-<div data-bg="/assets/field_country/{{ value }}.svg" class="lazy rounded-circle bg-cover" style='width: 20px; height: 20px;' title='{{ value|trans }}'></div>
+<div
+        data-bs-toggle="tooltip"
+        data-bs-placement="bottom"
+        data-bs-delay='{"show":600,"hide":100}'
+        data-bg="/assets/field_country/{{ value }}.svg"
+     class="lazy rounded-circle bg-cover"
+     style='width: 20px; height: 20px;' title='{{ value|trans }}'>
+</div>
