--- a/Resources/view/render.html.twig
+++ b/Resources/view/render.html.twig
@@ -1,11 +1,12 @@
 {% trans_default_domain('field.country') %}
-
 <div
-        role="button"
+        role="img"
         data-bs-toggle="tooltip"
         data-bs-placement="bottom"
         data-bs-delay='{"show":600,"hide":100}'
         data-bg="/assets/field_country/{{ value }}.svg"
         class="lazy rounded-circle bg-cover"
-        style='width: 20px; height: 20px;' title='{{ value|trans }}'>
+        style='width: 20px; height: 20px;'
+        title='{{ value|trans }}'
+>
 </div>
